# CommonAssignment2-MPI

./: CMakeLists.txt  README.md  configDoxy.file
doxygenDocumentation/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html
doxygenDocumentation/html/d0/d29/: main_8c.html
doxygenDocumentation/html/d4/d10/: main_8c__incl.map  main_8c__incl.md5
doxygenDocumentation/html/search/: functions_0.js  searchdata.js
doxygenDocumentation/latex/: refman.tex
doxygenDocumentation/latex/d0/d29/: main_8c.tex
doxygenDocumentation/latex/d4/d10/: main_8c__incl.md5
include/: utils.h
measures/: extract.py  measures.bash
measures/measure/SIZE-100000000-O1-V1/: SIZE-100000000-NP-01-O1-V1.csv  SIZE-100000000-NP-02-O1-V1.csv  SIZE-100000000-NP-04-O1-V1.csv  SIZE-100000000-NP-08-O1-V1.csv  SIZE-100000000-NP-16-O1-V1.csv
measures/measure/SIZE-100000000-O1-V2/: SIZE-100000000-NP-01-O1-V2.csv  SIZE-100000000-NP-02-O1-V2.csv  SIZE-100000000-NP-04-O1-V2.csv  SIZE-100000000-NP-08-O1-V2.csv  SIZE-100000000-NP-16-O1-V2.csv
measures/measure/SIZE-100000000-O2-V1/: SIZE-100000000-NP-01-O2-V1.csv  SIZE-100000000-NP-02-O2-V1.csv  SIZE-100000000-NP-04-O2-V1.csv  SIZE-100000000-NP-08-O2-V1.csv  SIZE-100000000-NP-16-O2-V1.csv
measures/measure/SIZE-100000000-O2-V2/: SIZE-100000000-NP-01-O2-V2.csv  SIZE-100000000-NP-02-O2-V2.csv  SIZE-100000000-NP-04-O2-V2.csv  SIZE-100000000-NP-08-O2-V2.csv  SIZE-100000000-NP-16-O2-V2.csv
measures/measure/SIZE-100000000-O3-V1/: SIZE-100000000-NP-01-O3-V1.csv  SIZE-100000000-NP-02-O3-V1.csv  SIZE-100000000-NP-04-O3-V1.csv  SIZE-100000000-NP-08-O3-V1.csv  SIZE-100000000-NP-16-O3-V1.csv
measures/measure/SIZE-100000000-O3-V2/: SIZE-100000000-NP-01-O3-V2.csv  SIZE-100000000-NP-02-O3-V2.csv  SIZE-100000000-NP-04-O3-V2.csv  SIZE-100000000-NP-08-O3-V2.csv  SIZE-100000000-NP-16-O3-V2.csv
measures/measure/SIZE-150000000-O1-V1/: SIZE-150000000-NP-01-O1-V1.csv  SIZE-150000000-NP-02-O1-V1.csv  SIZE-150000000-NP-04-O1-V1.csv  SIZE-150000000-NP-08-O1-V1.csv  SIZE-150000000-NP-16-O1-V1.csv
measures/measure/SIZE-150000000-O1-V2/: SIZE-150000000-NP-01-O1-V2.csv  SIZE-150000000-NP-02-O1-V2.csv  SIZE-150000000-NP-04-O1-V2.csv  SIZE-150000000-NP-08-O1-V2.csv  SIZE-150000000-NP-16-O1-V2.csv
measures/measure/SIZE-150000000-O2-V1/: SIZE-150000000-NP-01-O2-V1.csv  SIZE-150000000-NP-02-O2-V1.csv  SIZE-150000000-NP-04-O2-V1.csv  SIZE-150000000-NP-08-O2-V1.csv  SIZE-150000000-NP-16-O2-V1.csv
measures/measure/SIZE-150000000-O2-V2/: SIZE-150000000-NP-01-O2-V2.csv  SIZE-150000000-NP-02-O2-V2.csv  SIZE-150000000-NP-04-O2-V2.csv  SIZE-150000000-NP-08-O2-V2.csv  SIZE-150000000-NP-16-O2-V2.csv
measures/measure/SIZE-150000000-O3-V1/: SIZE-150000000-NP-01-O3-V1.csv  SIZE-150000000-NP-02-O3-V1.csv  SIZE-150000000-NP-04-O3-V1.csv  SIZE-150000000-NP-08-O3-V1.csv  SIZE-150000000-NP-16-O3-V1.csv
measures/measure/SIZE-150000000-O3-V2/: SIZE-150000000-NP-01-O3-V2.csv  SIZE-150000000-NP-02-O3-V2.csv  SIZE-150000000-NP-04-O3-V2.csv  SIZE-150000000-NP-08-O3-V2.csv  SIZE-150000000-NP-16-O3-V2.csv
measures/measure/SIZE-200000000-O1-V1/: SIZE-200000000-NP-01-O1-V1.csv  SIZE-200000000-NP-02-O1-V1.csv  SIZE-200000000-NP-04-O1-V1.csv  SIZE-200000000-NP-08-O1-V1.csv  SIZE-200000000-NP-16-O1-V1.csv
measures/measure/SIZE-200000000-O1-V2/: SIZE-200000000-NP-01-O1-V2.csv  SIZE-200000000-NP-02-O1-V2.csv  SIZE-200000000-NP-04-O1-V2.csv  SIZE-200000000-NP-08-O1-V2.csv  SIZE-200000000-NP-16-O1-V2.csv
measures/measure/SIZE-200000000-O2-V1/: SIZE-200000000-NP-01-O2-V1.csv  SIZE-200000000-NP-02-O2-V1.csv  SIZE-200000000-NP-04-O2-V1.csv  SIZE-200000000-NP-08-O2-V1.csv  SIZE-200000000-NP-16-O2-V1.csv
measures/measure/SIZE-200000000-O2-V2/: SIZE-200000000-NP-01-O2-V2.csv  SIZE-200000000-NP-02-O2-V2.csv  SIZE-200000000-NP-04-O2-V2.csv  SIZE-200000000-NP-08-O2-V2.csv  SIZE-200000000-NP-16-O2-V2.csv
measures/measure/SIZE-200000000-O3-V1/: SIZE-200000000-NP-01-O3-V1.csv  SIZE-200000000-NP-02-O3-V1.csv  SIZE-200000000-NP-04-O3-V1.csv  SIZE-200000000-NP-08-O3-V1.csv  SIZE-200000000-NP-16-O3-V1.csv
measures/measure/SIZE-200000000-O3-V2/: SIZE-200000000-NP-01-O3-V2.csv  SIZE-200000000-NP-02-O3-V2.csv  SIZE-200000000-NP-04-O3-V2.csv  SIZE-200000000-NP-08-O3-V2.csv  SIZE-200000000-NP-16-O3-V2.csv
measures/measure/SIZE-50000000-O1-V1/: SIZE-50000000-NP-01-O1-V1.csv  SIZE-50000000-NP-02-O1-V1.csv  SIZE-50000000-NP-04-O1-V1.csv  SIZE-50000000-NP-08-O1-V1.csv  SIZE-50000000-NP-16-O1-V1.csv
measures/measure/SIZE-50000000-O1-V2/: SIZE-50000000-NP-01-O1-V2.csv  SIZE-50000000-NP-02-O1-V2.csv  SIZE-50000000-NP-04-O1-V2.csv  SIZE-50000000-NP-08-O1-V2.csv  SIZE-50000000-NP-16-O1-V2.csv
measures/measure/SIZE-50000000-O2-V1/: SIZE-50000000-NP-01-O2-V1.csv  SIZE-50000000-NP-02-O2-V1.csv  SIZE-50000000-NP-04-O2-V1.csv  SIZE-50000000-NP-08-O2-V1.csv  SIZE-50000000-NP-16-O2-V1.csv
measures/measure/SIZE-50000000-O2-V2/: SIZE-50000000-NP-01-O2-V2.csv  SIZE-50000000-NP-02-O2-V2.csv  SIZE-50000000-NP-04-O2-V2.csv  SIZE-50000000-NP-08-O2-V2.csv  SIZE-50000000-NP-16-O2-V2.csv
measures/measure/SIZE-50000000-O3-V1/: SIZE-50000000-NP-01-O3-V1.csv  SIZE-50000000-NP-02-O3-V1.csv  SIZE-50000000-NP-04-O3-V1.csv  SIZE-50000000-NP-08-O3-V1.csv  SIZE-50000000-NP-16-O3-V1.csv
measures/measure/SIZE-50000000-O3-V2/: SIZE-50000000-NP-01-O3-V2.csv  SIZE-50000000-NP-02-O3-V2.csv  SIZE-50000000-NP-04-O3-V2.csv  SIZE-50000000-NP-08-O3-V2.csv  SIZE-50000000-NP-16-O3-V2.csv
src/: main.c  mainV1.c  mainV2.c  main_seq.c  utils.c
test/: test.c
